# tuyaopen-embedded-core

./: .gitmodules  LICENSE  README.md
components/: CMakeLists.txt
demos/switch_demo/: CMakeLists.txt  main.c
